--- a/Testing/LVDS Test/First_Implementation/LVDS_First_Implementation_par.html
+++ b/Testing/LVDS Test/First_Implementation/LVDS_First_Implementation_par.html
@@ -12,11 +12,12 @@ Copyright (c) 1995 AT&amp;T Corp.   All rights reserved.
 Copyright (c) 1995-2001 Lucent Technologies Inc.  All rights reserved.
 Copyright (c) 2001 Agere Systems   All rights reserved.
 Copyright (c) 2002-2023 Lattice Semiconductor Corporation,  All rights reserved.
-Fri Apr 19 17:34:25 2024
+Thu May  9 15:54:57 2024
 
 /home/user/FPGA/tools/diamond/usr/local/diamond/3.13/ispfpga/bin/lin64/par -f
 LVDS_First_Implementation.p2t LVDS_First_Implementation_map.ncd
-LVDS_First_Implementation.dir LVDS_First_Implementation.prf -gui
+LVDS_First_Implementation.dir LVDS_First_Implementation.prf -gui -msgset
+/home/user/SDR-HLS/Testing/LVDS Test/promote.xml
 
 
 Preference file: LVDS_First_Implementation.prf.
@@ -25,22 +26,22 @@ Preference file: LVDS_First_Implementation.prf.
 Level/       Number       Worst        Timing       Worst        Timing       Run          NCD
 Cost [ncd]   Unrouted     Slack        Score        Slack(hold)  Score(hold)  Time         Status
 ----------   --------     -----        ------       -----------  -----------  ----         ------
-5_1   *      0            -            -            -            -            30           Completed
+5_1   *      0            1073741.823  0            1073741.823  0            35           Completed
 * : Design saved.
 
-Total (real) run time for 1-seed: 30 secs 
+Total (real) run time for 1-seed: 35 secs 
 
 par done!
 
 Note: user must run &apos;Trace&apos; for timing closure signoff.
 
 Lattice Place and Route Report for Design &quot;LVDS_First_Implementation_map.ncd&quot;
-Fri Apr 19 17:34:25 2024
+Thu May  9 15:54:57 2024
 
 
 <A name="par_best"></A><B><U><big>Best Par Run</big></U></B>
 PAR: Place And Route Diamond (64-bit) 3.13.0.56.2.
-Command Line: par -w -l 5 -i 6 -t 1 -c 0 -e 0 -gui -exp parUseNBR=1:parCDP=auto:parCDR=1:parPathBased=OFF:parASE=1:par_low_skew_clock_net=0 LVDS_First_Implementation_map.ncd LVDS_First_Implementation.dir/5_1.ncd LVDS_First_Implementation.prf
+Command Line: par -w -l 5 -i 6 -t 1 -c 0 -e 0 -gui -msgset &quot;/home/user/SDR-HLS/Testing/LVDS Test/promote.xml&quot; -exp parUseNBR=1:parCDP=auto:parCDR=1:parPathBased=OFF:parASE=1:par_low_skew_clock_net=0 LVDS_First_Implementation_map.ncd LVDS_First_Implementation.dir/5_1.ncd LVDS_First_Implementation.prf
 Preference file: LVDS_First_Implementation.prf.
 Placement level-cost: 5-1.
 Routing Iterations: 6
@@ -62,19 +63,19 @@ Ignore Preference Error(s):  True
 
 <A name="par_dus"></A><B><U><big>Device utilization summary:</big></U></B>
 
-   PIO (prelim)       6/365           1% used
-                      6/205           2% bonded
+   PIO (prelim)       5/365           1% used
+                      5/205           2% bonded
 
    SLICE              1/41820        &lt;1% used
 
    GSR                1/1           100% used
 
 
-Number of Signals: 6
-Number of Connections: 8
+Number of Signals: 4
+Number of Connections: 5
 
 Pin Constraint Summary:
-   4 out of 6 pins locked (66% locked).
+   4 out of 5 pins locked (80% locked).
 
 The following 1 signal is selected to use the primary clock routing resources:
     i_clk_c (driver: i_clk, clk/ce/sr load #: 1/0/0)
@@ -83,18 +84,18 @@ The following 1 signal is selected to use the primary clock routing resources:
 Signal i_reset_c is selected as Global Set/Reset.
 .
 Starting Placer Phase 0.
-...........
+.......
 Finished Placer Phase 0.  REAL time: 6 secs 
 
 Starting Placer Phase 1.
-....................
-Placer score = 3604.
-Finished Placer Phase 1.  REAL time: 13 secs 
+.................
+Placer score = 3552.
+Finished Placer Phase 1.  REAL time: 12 secs 
 
 Starting Placer Phase 2.
 .
-Placer score =  3604
-Finished Placer Phase 2.  REAL time: 13 secs 
+Placer score =  3552
+Finished Placer Phase 2.  REAL time: 12 secs 
 
 
 
@@ -113,17 +114,17 @@ Quadrant TL Clocks:
   PRIMARY  : 0 out of 16 (0%)
 
 Quadrant TR Clocks:
-  PRIMARY &quot;i_clk_c&quot; from comp &quot;i_clk&quot; on CLK_PIN site &quot;B12 (PT71A)&quot;, CLK/CE/SR load = 1
 
-  PRIMARY  : 1 out of 16 (6%)
+  PRIMARY  : 0 out of 16 (0%)
 
 Quadrant BL Clocks:
 
   PRIMARY  : 0 out of 16 (0%)
 
 Quadrant BR Clocks:
+  PRIMARY &quot;i_clk_c&quot; from comp &quot;i_clk&quot; on CLK_PIN site &quot;G2 (PL47A)&quot;, CLK/CE/SR load = 1
 
-  PRIMARY  : 0 out of 16 (0%)
+  PRIMARY  : 1 out of 16 (6%)
 
 Edge Clocks:
 
@@ -135,9 +136,9 @@ Edge Clocks:
 
 +
 I/O Usage Summary (final):
-   6 out of 365 (1.6%) PIO sites used.
-   6 out of 205 (2.9%) bonded PIO sites used.
-   Number of PIO comps: 6; differential: 0.
+   5 out of 365 (1.4%) PIO sites used.
+   5 out of 205 (2.4%) bonded PIO sites used.
+   Number of PIO comps: 5; differential: 0.
    Number of Vref pins used: 0.
 
 I/O Bank Usage Summary:
@@ -145,29 +146,24 @@ I/O Bank Usage Summary:
 | I/O Bank | Usage         | Bank Vccio | Bank Vref1 | Bank Vref2 |
 +----------+---------------+------------+------------+------------+
 | 0        | 1 / 27 (  3%) | 3.3V       | -          | -          |
-| 1        | 1 / 33 (  3%) | 2.5V       | -          | -          |
-| 2        | 2 / 34 (  5%) | 2.5V       | -          | -          |
+| 1        | 0 / 33 (  0%) | -          | -          | -          |
+| 2        | 1 / 34 (  2%) | 2.5V       | -          | -          |
 | 3        | 1 / 33 (  3%) | 2.5V       | -          | -          |
-| 6        | 0 / 33 (  0%) | -          | -          | -          |
+| 6        | 1 / 33 (  3%) | 3.3V       | -          | -          |
 | 7        | 0 / 32 (  0%) | -          | -          | -          |
 | 8        | 1 / 13 (  7%) | 3.3V       | -          | -          |
 +----------+---------------+------------+------------+------------+
 
-Total placer CPU time: 13 secs 
+Total placer CPU time: 12 secs 
 
 Dumping design to file LVDS_First_Implementation.dir/5_1.ncd.
 
-
------------------------------------------------------------------
-INFO - par: ASE feature is off due to non timing-driven settings.  
------------------------------------------------------------------
-
-0 connections routed; 8 unrouted.
+0 connections routed; 5 unrouted.
 Starting router resource preassignment
 
-Completed router resource preassignment. Real time: 27 secs 
+Completed router resource preassignment. Real time: 32 secs 
 
-Start NBR router at Fri Apr 19 17:34:52 CEST 2024
+Start NBR router at Thu May 09 15:55:29 CEST 2024
 
 *****************************************************************
 Info: NBR allows conflicts(one node used by more than one signal)
@@ -182,24 +178,24 @@ Note: NBR uses a different method to calculate timing slacks. The
       your design.                                               
 *****************************************************************
 
-Start NBR special constraint process at Fri Apr 19 17:34:52 CEST 2024
+Start NBR special constraint process at Thu May 09 15:55:29 CEST 2024
 
-Start NBR section for initial routing at Fri Apr 19 17:34:52 CEST 2024
+Start NBR section for initial routing at Thu May 09 15:55:29 CEST 2024
 Level 4, iteration 1
-0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; real time: 28 secs 
+0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 0 (nbr) score; real time: 33 secs 
 
 Info: Initial congestion level at 75% usage is 0
 Info: Initial congestion area  at 75% usage is 0 (0.00%)
 
-Start NBR section for normal routing at Fri Apr 19 17:34:53 CEST 2024
+Start NBR section for normal routing at Thu May 09 15:55:30 CEST 2024
 Level 4, iteration 1
-0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; real time: 28 secs 
+0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 0 (nbr) score; real time: 33 secs 
 
-Start NBR section for re-routing at Fri Apr 19 17:34:53 CEST 2024
+Start NBR section for re-routing at Thu May 09 15:55:30 CEST 2024
 Level 4, iteration 1
-0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; real time: 28 secs 
+0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 0 (nbr) score; real time: 33 secs 
 
-Start NBR section for post-routing at Fri Apr 19 17:34:53 CEST 2024
+Start NBR section for post-routing at Thu May 09 15:55:30 CEST 2024
 
 End NBR router with 0 unrouted connection
 
@@ -214,10 +210,10 @@ Notes: The timing info is calculated for SETUP only and all PAR_ADJs are ignored
 
 
 
-Total CPU time 28 secs 
-Total REAL time: 28 secs 
+Total CPU time 33 secs 
+Total REAL time: 34 secs 
 Completely routed.
-End of route.  8 routed (100.00%); 0 unrouted.
+End of route.  5 routed (100.00%); 0 unrouted.
 
 Hold time timing score: 0, hold timing errors: 0
 
@@ -231,14 +227,14 @@ All signals are completely routed.
 
 PAR_SUMMARY::Run status = Completed
 PAR_SUMMARY::Number of unrouted conns = 0
-PAR_SUMMARY::Worst  slack&lt;setup/&lt;ns&gt;&gt; = &lt;n/a&gt;
-PAR_SUMMARY::Timing score&lt;setup/&lt;ns&gt;&gt; = &lt;n/a&gt;
-PAR_SUMMARY::Worst  slack&lt;hold /&lt;ns&gt;&gt; = &lt;n/a&gt;
-PAR_SUMMARY::Timing score&lt;hold /&lt;ns&gt;&gt; = &lt;n/a&gt;
+PAR_SUMMARY::Worst  slack&lt;setup/&lt;ns&gt;&gt; = 1073741.823
+PAR_SUMMARY::Timing score&lt;setup/&lt;ns&gt;&gt; = 0.000
+PAR_SUMMARY::Worst  slack&lt;hold /&lt;ns&gt;&gt; = 1073741.823
+PAR_SUMMARY::Timing score&lt;hold /&lt;ns&gt;&gt; = 0.000
 PAR_SUMMARY::Number of errors = 0
 
-Total CPU  time to completion: 30 secs 
-Total REAL time to completion: 30 secs 
+Total CPU  time to completion: 34 secs 
+Total REAL time to completion: 35 secs 
 
 par done!
 
