--- a/Testing/LVDS Test/First_Implementation/LVDS_First_Implementation_twr.html
+++ b/Testing/LVDS Test/First_Implementation/LVDS_First_Implementation_twr.html
@@ -22,7 +22,7 @@ Setup and Hold Report
 
 --------------------------------------------------------------------------------
 <A name="Par_Twr_setup"></A><B><U><big>Lattice TRACE Report - Setup, Version Diamond (64-bit) 3.13.0.56.2</big></U></B>
-Fri Apr 19 17:35:00 2024
+Thu May  9 15:55:39 2024
 
 Copyright (c) 1991-1994 by NeoCAD Inc. All rights reserved.
 Copyright (c) 1995 AT&T Corp.   All rights reserved.
@@ -32,7 +32,7 @@ Copyright (c) 2002-2023 Lattice Semiconductor Corporation,  All rights reserved.
 
 <A name="ptwr_set_ri"></A><B><U><big>Report Information</big></U></B>
 ------------------
-Command line:    trce -v 10 -gt -sethld -sp 6 -sphld m -o LVDS_First_Implementation.twr -gui LVDS_First_Implementation.ncd LVDS_First_Implementation.prf 
+Command line:    trce -v 10 -gt -sethld -sp 6 -sphld m -o LVDS_First_Implementation.twr -gui -msgset /home/user/SDR-HLS/Testing/LVDS Test/promote.xml LVDS_First_Implementation.ncd LVDS_First_Implementation.prf 
 Design file:     LVDS_First_Implementation.ncd
 Preference file: LVDS_First_Implementation.prf
 Device,speed:    LFE5U-85F,6
@@ -41,10 +41,8 @@ Report level:    verbose report, limited to 10 items per preference
 
 <A name="ptwr_set_ps"></A><B><U><big>Preference Summary</big></U></B>
 
-<LI><A href='#par_twr_pref_0_0' Target='right'>Default path enumeration(0 errors)</A></LI>            6 items scored, 0 timing errors detected.
-Report:  408.998MHz is the maximum frequency for this preference.
-
-<LI><A href='#par_twr_pref_0_1' Target='right'>Default net enumeration(0 errors)</A></LI>            6 items scored, 0 timing errors detected.
+<LI><A href='#par_twr_pref_0_0' Target='right'>FREQUENCY PORT "i_clk" 25.000000 MHz (0 errors)</A></LI>            0 items scored, 0 timing errors detected.
+Report:  200.000MHz is the maximum frequency for this preference.
 
 BLOCK ASYNCPATHS
 BLOCK RESETPATHS
@@ -53,107 +51,21 @@ BLOCK RESETPATHS
 
 
 ================================================================================
-<A name="par_twr_pref_0_0"></A>Preference: Default path enumeration
-            6 items scored, 0 timing errors detected.
+<A name="par_twr_pref_0_0"></A>Preference: FREQUENCY PORT "i_clk" 25.000000 MHz ;
+            0 items scored, 0 timing errors detected.
 --------------------------------------------------------------------------------
 
-Report:    7.382ns delay i_clk to o_clk
 
-   Name    Fanout   Delay (ns)          Site               Resource
-PADI_DEL    ---     1.005        B12.PAD to      B12.PADDI i_clk
-ROUTE         2     3.703      B12.PADDI to      A10.PADDO i_clk_c
-DOPAD_DEL   ---     2.674      A10.PADDO to        A10.PAD o_clk
-                  --------
-                    7.382   (49.8% logic, 50.2% route), 2 logic levels.
+Passed:  The following path meets requirements by 35.000ns
+         The internal maximum frequency of the following component is 200.000 MHz
 
-Report:    6.883ns delay SLICE_0 to o_LVDS
+ Logical Details:  Cell type  Pin name       Component name
 
-   Name    Fanout   Delay (ns)          Site               Resource
-REG_DEL     ---     0.525   R20C124B.CLK to    R20C124B.Q0 SLICE_0 (from i_clk_c)
-ROUTE         1     4.407    R20C124B.Q0 to      U18.PADDO o_LVDS_c
-DOPAD_DEL   ---     1.951      U18.PADDO to        U18.PAD o_LVDS
-                  --------
-                    6.883   (36.0% logic, 64.0% route), 2 logic levels.
+   Destination:    PIO        PAD            i_clk
 
-Report:    3.786ns delay i_clk to SLICE_0
+   Delay:               5.000ns -- based on Minimum Pulse Width
 
-   Name    Fanout   Delay (ns)          Site               Resource
-PADI_DEL    ---     1.005        B12.PAD to      B12.PADDI i_clk
-ROUTE         2     2.781      B12.PADDI to   R20C124B.CLK i_clk_c
-                  --------
-                    3.786   (26.5% logic, 73.5% route), 1 logic levels.
-
-Report:    2.445ns delay i_LVDS_p to SLICE_0 (2.021ns delay and 0.424ns setup)
-
-   Name    Fanout   Delay (ns)          Site               Resource
-PADI_DEL    ---     1.005        H18.PAD to      H18.PADDI i_LVDS_p
-ROUTE         2     1.016      H18.PADDI to   R20C124B.LSR i_LVDS_p_c (to i_clk_c)
-                  --------
-                    2.021   (49.7% logic, 50.3% route), 1 logic levels.
-
-Report:    1.902ns delay i_LVDS_n to SLICE_0 (2.162ns delay and -0.260ns setup)
-
-   Name    Fanout   Delay (ns)          Site               Resource
-PADI_DEL    ---     1.005        H17.PAD to      H17.PADDI i_LVDS_n
-ROUTE         1     0.921      H17.PADDI to    R20C124B.A0 i_LVDS_n_c
-CTOF_DEL    ---     0.236    R20C124B.A0 to    R20C124B.F0 SLICE_0
-ROUTE         1     0.000    R20C124B.F0 to   R20C124B.DI0 n1 (to i_clk_c)
-                  --------
-                    2.162   (57.4% logic, 42.6% route), 2 logic levels.
-
-Report:    1.744ns delay i_LVDS_p to SLICE_0 (2.004ns delay and -0.260ns setup)
-
-   Name    Fanout   Delay (ns)          Site               Resource
-PADI_DEL    ---     1.005        H18.PAD to      H18.PADDI i_LVDS_p
-ROUTE         2     0.763      H18.PADDI to    R20C124B.C0 i_LVDS_p_c
-CTOF_DEL    ---     0.236    R20C124B.C0 to    R20C124B.F0 SLICE_0
-ROUTE         1     0.000    R20C124B.F0 to   R20C124B.DI0 n1 (to i_clk_c)
-                  --------
-                    2.004   (61.9% logic, 38.1% route), 2 logic levels.
-
-Report:  408.998MHz is the maximum frequency for this preference.
-
-Report:    7.382ns is the maximum delay for this preference.
-
-
-================================================================================
-<A name="par_twr_pref_0_1"></A>Preference: Default net enumeration
-            6 items scored, 0 timing errors detected.
---------------------------------------------------------------------------------
-
-Report:    4.407ns maximum delay on o_LVDS_c
-
-           Delays             Connection(s)
-           4.407ns      R20C124B.Q0 to U18.PADDO       
-
-Report:    3.703ns maximum delay on i_clk_c
-
-           Delays             Connection(s)
-           3.703ns        B12.PADDI to A10.PADDO       
-           2.781ns        B12.PADDI to R20C124B.CLK    
-
-Report:    1.016ns maximum delay on i_LVDS_p_c
-
-           Delays             Connection(s)
-           1.016ns        H18.PADDI to R20C124B.LSR    
-           0.763ns        H18.PADDI to R20C124B.C0     
-
-Report:    0.921ns maximum delay on i_LVDS_n_c
-
-           Delays             Connection(s)
-           0.921ns        H17.PADDI to R20C124B.A0     
-
-Report:    0.738ns maximum delay on i_reset_c
-
-           Delays             Connection(s)
-           0.738ns         T1.PADDI to GSR.GSR         
-
-Report:    0.000ns maximum delay on n1
-
-           Delays             Connection(s)
-           0.000ns      R20C124B.F0 to R20C124B.DI0    
-
-Report:    4.407ns is the maximum delay for this preference.
+Report:  200.000MHz is the maximum frequency for this preference.
 
 <A name="ptwr_set_rs"></A><B><U><big>Report Summary</big></U></B>
 --------------
@@ -161,9 +73,7 @@ Report:    4.407ns is the maximum delay for this preference.
 Preference                              |   Constraint|       Actual|Levels
 ----------------------------------------------------------------------------
                                         |             |             |
-Default path enumeration                |     0.000 ns|     7.382 ns|   0  
-                                        |             |             |
-Default net enumeration                 |     0.000 ns|     4.407 ns|   0  
+FREQUENCY PORT "i_clk" 25.000000 MHz ;  |   25.000 MHz|  200.000 MHz|   0  
                                         |             |             |
 ----------------------------------------------------------------------------
 
@@ -186,7 +96,82 @@ Clock Domain: i_clk_c   Source: i_clk.PAD   Loads: 2
 Timing errors: 0  Score: 0
 Cumulative negative slack: 0
 
-Constraints cover 7 paths, 6 nets, and 8 connections (100.00% coverage)
+Constraints cover 0 paths, 1 nets, and 2 connections (40.00% coverage)
+
+--------------------------------------------------------------------------------
+<A name="Par_Twr_hold"></A><B><U><big>Lattice TRACE Report - Hold, Version Diamond (64-bit) 3.13.0.56.2</big></U></B>
+Thu May  9 15:55:40 2024
+
+Copyright (c) 1991-1994 by NeoCAD Inc. All rights reserved.
+Copyright (c) 1995 AT&T Corp.   All rights reserved.
+Copyright (c) 1995-2001 Lucent Technologies Inc.  All rights reserved.
+Copyright (c) 2001 Agere Systems   All rights reserved.
+Copyright (c) 2002-2023 Lattice Semiconductor Corporation,  All rights reserved.
+
+<A name="ptwr_hold_ri"></A><B><U><big>Report Information</big></U></B>
+------------------
+Command line:    trce -v 10 -gt -sethld -sp 6 -sphld m -o LVDS_First_Implementation.twr -gui -msgset /home/user/SDR-HLS/Testing/LVDS Test/promote.xml LVDS_First_Implementation.ncd LVDS_First_Implementation.prf 
+Design file:     LVDS_First_Implementation.ncd
+Preference file: LVDS_First_Implementation.prf
+Device,speed:    LFE5U-85F,m
+Report level:    verbose report, limited to 10 items per preference
+--------------------------------------------------------------------------------
+
+<A name="ptwr_hold_ps"></A><B><U><big>Preference Summary</big></U></B>
+
+<LI><A href='#par_twr_pref_1_0' Target='right'>FREQUENCY PORT "i_clk" 25.000000 MHz (0 errors)</A></LI>            0 items scored, 0 timing errors detected.
+
+BLOCK ASYNCPATHS
+BLOCK RESETPATHS
+--------------------------------------------------------------------------------
+
+
+
+================================================================================
+<A name="par_twr_pref_1_0"></A>Preference: FREQUENCY PORT "i_clk" 25.000000 MHz ;
+            0 items scored, 0 timing errors detected.
+--------------------------------------------------------------------------------
+
+<A name="ptwr_hold_rs"></A><B><U><big>Report Summary</big></U></B>
+--------------
+----------------------------------------------------------------------------
+Preference(MIN Delays)                  |   Constraint|       Actual|Levels
+----------------------------------------------------------------------------
+                                        |             |             |
+FREQUENCY PORT "i_clk" 25.000000 MHz ;  |            -|            -|   0  
+                                        |             |             |
+----------------------------------------------------------------------------
+
+
+All preferences were met.
+
+
+<A name="ptwr_hold_clkda"></A><B><U><big>Clock Domains Analysis</big></U></B>
+------------------------
+
+Found 1 clocks:
+
+Clock Domain: i_clk_c   Source: i_clk.PAD   Loads: 2
+   No transfer within this clock domain is found
+
+
+<A name="ptwr_hold_ts"></A><B><U><big>Timing summary (Hold):</big></U></B>
+---------------
+
+Timing errors: 0  Score: 0
+Cumulative negative slack: 0
+
+Constraints cover 0 paths, 1 nets, and 2 connections (40.00% coverage)
+
+
+
+<A name="ptwr_ts"></A><B><U><big>Timing summary (Setup and Hold):</big></U></B>
+---------------
+
+Timing errors: 0 (setup), 0 (hold)
+Score: 0 (setup), 0 (hold)
+Cumulative negative slack: 0 (0+0)
+--------------------------------------------------------------------------------
 
 --------------------------------------------------------------------------------
 
